--- a/app/src/main/res/layout/accueil_fragment.xml
+++ b/app/src/main/res/layout/accueil_fragment.xml
@@ -151,7 +151,7 @@
                     android:paddingTop="10dp"
                     android:paddingRight="10dp"
                     android:paddingBottom="10dp"
-                    android:text="Ma carte"
+                    android:text="Ma carte\nTachygraphe"
                     android:textColor="@color/blue" />
             </LinearLayout>
 
