--- a/app/src/main/res/layout/fragment_amplitude.xml
+++ b/app/src/main/res/layout/fragment_amplitude.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="28dp"
                 android:gravity="center"
-                android:text="Calculatrice d'amplitude"
+                android:text="Amplitude"
                 android:textColor="@color/blue"
                 android:textSize="20sp" />
 
