--- a/app/src/main/res/layout/fragment_amplitude.xml
+++ b/app/src/main/res/layout/fragment_amplitude.xml
@@ -19,22 +19,6 @@
         android:orientation="vertical">
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="28dp"
-                android:gravity="center"
-                android:text="Amplitude"
-                android:textColor="@color/blue"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -154,7 +138,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tvNombrePalettes"
+                            android:id="@+id/tvReposPalettes"
                             android:layout_width="110dp"
                             android:layout_height="match_parent"
                             android:layout_marginRight="6dp"
@@ -205,6 +189,36 @@
                             android:layout_height="30dp"
                             android:gravity="center"
                             android:text="Temps de service de nuit" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView63"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="0.8"
+                                android:gravity="center_vertical"
+                                android:text="Période(s) à risque de fatigue :"
+                                android:textColor="@color/blue"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/tvPeriodeRisque"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center" />
+
+                            <TextView
+                                android:id="@+id/tvPeriodeRisque2"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center" />
+                        </LinearLayout>
 
                     </LinearLayout>
 
