--- a/app/src/main/res/layout/fragment_repos_hebdo1.xml
+++ b/app/src/main/res/layout/fragment_repos_hebdo1.xml
@@ -120,7 +120,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/tvNombrePalettes"
+                            android:id="@+id/tvReposPalettes"
                             android:layout_width="110dp"
                             android:layout_height="match_parent"
                             android:layout_marginRight="6dp"
