--- a/app/src/main/res/layout/expandable_semaine_jour1.xml
+++ b/app/src/main/res/layout/expandable_semaine_jour1.xml
@@ -205,7 +205,7 @@
                 android:text="Pause de + de 3h pendant l'amplitude" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvRepos11hRestant"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
                 android:padding="6dp"
