--- a/app/src/main/res/layout/expandable_semaine_rh2.xml
+++ b/app/src/main/res/layout/expandable_semaine_rh2.xml
@@ -133,7 +133,7 @@
             android:padding="8dp">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvRepos11hRestant"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:padding="6dp"
