--- a/app/src/main/res/layout/fragment_amplitude2.xml
+++ b/app/src/main/res/layout/fragment_amplitude2.xml
@@ -184,7 +184,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/tvRepos11hRestant"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:gravity="center"
