--- a/app/src/main/res/layout/fragment_calculatrice_temps.xml
+++ b/app/src/main/res/layout/fragment_calculatrice_temps.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvRepos11hRestant"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center"
