--- a/app/src/main/res/layout/fragment_semaines.xml
+++ b/app/src/main/res/layout/fragment_semaines.xml
@@ -39,7 +39,7 @@
                         android:textSize="20sp" />
 
                     <TextView
-                        android:id="@+id/textView"
+                        android:id="@+id/tvRepos11hRestant"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:gravity="center"
