--- a/app/src/main/res/layout/fragment_amplitude.xml
+++ b/app/src/main/res/layout/fragment_amplitude.xml
@@ -181,7 +181,9 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal"/>
+                            android:orientation="horizontal">
+
+                        </LinearLayout>
 
                         <TextView
                             android:id="@+id/tvTempsServiveNuit"
@@ -195,20 +197,30 @@
                             android:layout_height="40dp"
                             android:orientation="horizontal">
 
+                            <ImageView
+                                android:id="@+id/imageView4"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1.15"
+                                ads:srcCompat="@drawable/fatigue_transparent" />
+
                             <TextView
                                 android:id="@+id/textView63"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_weight="0.8"
+                                android:layout_gravity="center_horizontal"
+                                android:layout_weight="1"
                                 android:gravity="center_vertical"
-                                android:text="Période(s) à risque de fatigue :"
+                                android:text="Risque de\nfatigue :"
                                 android:textColor="@color/blue"
+                                android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
                                 android:id="@+id/tvPeriodeRisque"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:layout_gravity="center"
                                 android:layout_weight="1"
                                 android:gravity="center" />
 
@@ -216,6 +228,7 @@
                                 android:id="@+id/tvPeriodeRisque2"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:layout_gravity="center"
                                 android:layout_weight="1"
                                 android:gravity="center" />
                         </LinearLayout>
