--- a/app/src/main/res/layout/fragment_semaines.xml
+++ b/app/src/main/res/layout/fragment_semaines.xml
@@ -27,30 +27,22 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/textView13"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
+                        android:layout_weight="0.8"
                         android:gravity="center"
                         android:text="Ma semaine"
                         android:textColor="@color/blue"
                         android:textSize="20sp" />
 
-                    <TextView
-                        android:id="@+id/tvRepos11hRestant"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:gravity="center"
-                        android:text="Développement en cours"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="20sp" />
-
                 </LinearLayout>
 
                 <com.alespero.expandablecardview.ExpandableCardView
-                    android:id="@+id/reposh"
+                    android:id="@+id/reposHbefore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:expandOnClick="true"
@@ -113,7 +105,7 @@
                     app:title="Jour 6" />
 
                 <com.alespero.expandablecardview.ExpandableCardView
-                    android:id="@+id/reposh2"
+                    android:id="@+id/reposHend"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:expandOnClick="true"
