--- a/app/src/main/res/layout/simple_widget.xml
+++ b/app/src/main/res/layout/simple_widget.xml
@@ -62,19 +62,33 @@
             android:gravity="center"
             android:text="Début d'amplitude"
             android:textColor="@color/ic_launcher_background" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_gravity="center"
                 android:layout_weight="0.3"
+                android:foregroundGravity="center"
                 android:paddingLeft="5dp"
                 android:src="@drawable/ic_logo2" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="0.3"
+                android:foregroundGravity="center"
+                android:paddingLeft="5dp"
+                android:src="@android:drawable/ic_lock_idle_alarm" />
 
             <TextView
                 android:id="@+id/textView"
@@ -92,7 +106,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0.3"
                 android:paddingRight="5dp"
-                android:src="@android:drawable/ic_media_play" />
+                android:src="@drawable/ic_baseline_settings_24"
+                android:tint="@color/black" />
 
         </LinearLayout>
 
@@ -115,7 +130,7 @@
                 android:id="@+id/textView169"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.75"
                 android:text="  Repos 11H"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
@@ -152,7 +167,7 @@
                 android:id="@+id/textView69"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="0.75"
                 android:text="  Repos 9H"
                 android:textColor="@color/black"
                 android:textStyle="bold" />
